@@ -1,8 +1,8 @@
 noinst_PROGRAMS = testpdf testpdfset analyticpdf compatibility
 
-AM_CPPFLAGS += -I$(top_srcdir)/include -I$(prefix)/include $(BOOST_CPPFLAGS) $(YAMLCPP_CPPFLAGS)
-AM_LDFLAGS += -L$(top_builddir)/src -L$(prefix)/lib $(BOOST_LDFLAGS) $(YAMLCPP_LDFLAGS)
-LIBS = -lLHAPDF $(BOOST_LIBS)
+AM_CPPFLAGS += -I$(top_srcdir)/include -I$(prefix)/include $(BOOST_CPPFLAGS)
+AM_LDFLAGS += -L$(top_builddir)/src -L$(prefix)/lib
+LIBS = -lLHAPDF
 
 testpdf_SOURCES = testpdf.cc
 testpdfset_SOURCES = testpdfset.cc
