@@ -37,13 +37,13 @@ tmp=$( echo "$*" | egrep -- '--\<incdir\>')
 test -n "$tmp" && OUT="$OUT @includedir@"
 
 tmp=$( echo "$*" | egrep -- '--\<cppflags|cxxflags\>')
-test -n "$tmp" && OUT="$OUT -I@includedir@ @BOOST_CPPFLAGS@ @YAMLCPP_CPPFLAGS@"
+test -n "$tmp" && OUT="$OUT -I@includedir@ @BOOST_CPPFLAGS@"
 
 tmp=$( echo "$*" | egrep -- '--\<libdir\>')
 test -n "$tmp" && OUT="$OUT @libdir@"
 
 tmp=$( echo "$*" | egrep -- '--\<ldflags\>')
-test -n "$tmp" && OUT="$OUT -L@libdir@ @YAMLCPP_LDFLAGS@ -lLHAPDF @YAMLCPP_LIBS@"
+test -n "$tmp" && OUT="$OUT -L@libdir@ -lLHAPDF"
 
 tmp=$( echo "$*" | egrep -- '--\<datadir\>|--\<datarootdir\>')
 test -n "$tmp" && OUT="$OUT @datadir@/@PACKAGE_TARNAME@"
